[package]
name = "nexus-mvn-download-cli"
version = "0.1.0"
authors = ["Gabriel Batista <svbgabriel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
reqwest = { version = "0.11.3", features = ["blocking"] }
